# flux-schnell-edge-inference

./: README.md  pyproject.toml
src/: pipeline.py
